ecs-alb.tf
resource "aws_lb" "alb" {
  name = "webapp_alb_tf"
  internal = false
  load_balancer_type = "application"
  security_groups = [aws_security_group.allow_global_connection.id]
  subnets = [aws_subnet.public.*.id]

  enable_deletion_protection = true

  tags = {

  }
}

resource "aws_lb_target_group" "lb_target_group" {
    name = "webapp-target-alb-tf"
    port = "80"
    protocol = "HTTP"
    vpc_id = aws_vpc.vpc.id

    health_check {
        path = "/"
        protocol = "HTTP"
        matcher = "200"
        interval = 15
        timeout = 3
        healthy_threshold = 2
        unhealthy_threshold = 2
    } 
}

resource "aws_lb_listner" "alb_listener" {
    default_action {
        target_group_arn = aws_lb_target_group.lb_target_group.id
        type = "forward"
    }

    load_balancer_arn = aws_lb.alb.arn
    port "80"
    protocol = "HTTP"
}
